fixed footer issues, fixed layout bug

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -16,3 +16,6 @@
     margin-top: 50px;
     border-color: #ffa726;
 }
+.profile-welcome{
+    margin-bottom: 200px;
+}
